<resources>
    <string name="app_name">TiktokDownloaded</string>
    <string name="home">Home</string>
    <string name="my_file">My file</string>
    <string name="trending">Trending</string>
    <string name="explore">Explore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tiktok_downloader">Tiktok Downloader</string>
    <string name="please_paste_link_here">Please paste link here</string>
    <string name="paste">Paste</string>
    <string name="how_to_use">How To Use?</string>
    <string name="download_video">Download Video</string>
    <string name="text_demo">Title Lorem ipsum dolor sit ame, consectetur ipsum...</string>
    <string name="download_video_no_watermark">Download video (No-watermark)</string>
    <string name="download_audio">Download Audio</string>
    <string name="download_thumbnail_jpg">Download Thumbnail (JPG)</string>
    <string name="title_lorem_ipsum_dolor_sit_ame_consectetur_ipsum">Title Lorem ipsum dolor sit ame, consectetur ipsum...</string>
    <string name="nameofuser">/@nameofuser</string>
    <string name="no_watermark">No-watermark</string>
    <string name="_15mps">15Mps</string>
    <string name="downloading">Downloading...</string>
    <string name="tiktok">TIKTOK</string>
    <string name="video_download">VIDEO DOWNLOAD</string>
    <string name="search_view">Search anythings you want...</string>
    <string name="repost">Repost</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="depost">Depost</string>
    <string name="share">Share</string>
    <string name="split_audio">Split Audio</string>
    <string name="rename">Rename</string>
    <string name="new_title">New title</string>
    <string name="change">Change</string>
    <string name="close">Close</string>
</resources>