<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:focusableInTouchMode="true"
    tools:context=".view.fragment.HomeFragment"
    tools:viewBindingIgnore="true">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilFind"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnPaste"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"

            android:layout_height="48dp"
            android:background="@drawable/custom_textinput"
            android:fontFamily="@font/nova"
            android:hint="@string/please_paste_link_here"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPaste"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#000000"
        android:fontFamily="@font/nova"
        android:text="@string/paste"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDownload"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:alpha="0.5"
        android:fontFamily="@font/nova"
        android:text="@string/download_video"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:cornerRadius="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilFind"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:id="@+id/btnTutor"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/custom_outline_ask"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:textAllCaps="false"
        app:cardCornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="3"
            android:fontFamily="@font/nova"
            android:gravity="center"
            android:text="@string/how_to_use"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:src="@drawable/ic_tutor" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layoutPreView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDownload"
        app:layout_constraintVertical_bias="0.0">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="14dp"
            app:cardCornerRadius="4dp">

            <ImageView
                android:id="@+id/imgPreviewRow"
                android:layout_width="60dp"
                android:layout_height="80dp"
                android:background="@color/black" />
            <TextView
                android:id="@+id/tvTimeVideoRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:fontFamily="@font/nova"
                android:text="00:09"
                android:textColor="@color/white"
                android:layout_gravity="end|bottom"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="1dp"/>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitleRow"
                android:layout_width="153dp"
                android:layout_height="36dp"
                android:layout_marginBottom="8dp"
                android:ellipsize="end"
                android:fontFamily="@font/nova"
                android:maxLines="2"
                android:text="@string/text_demo"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                app:showAsAction="always" />

            <TextView
                android:id="@+id/tvSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nova"
                android:text="\@nameofuser"
                android:textColor="#505359"
                android:textSize="11sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnDownloadVideo"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        android:height="56dp"
        android:background="@drawable/custom_button_blue"
        android:backgroundTint="@color/secondary_blue"
        android:drawableStart="@drawable/ic_camera_border"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/download_video_no_watermark"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:cardCornerRadius="100dp"
        app:cornerRadius="100dp"
        app:icon="@drawable/ic_camera_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutPreView"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_camera_border" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nova"
            android:text="@string/download_video_no_watermark"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnDownloadAudio"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        android:height="56dp"
        android:background="@drawable/custom_button_border"
        android:drawableStart="@drawable/ic_camera_border"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/download_video_no_watermark"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:cardCornerRadius="100dp"
        app:cornerRadius="100dp"
        app:icon="@drawable/ic_camera_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDownloadVideo"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_majesticons_music_note_line" />

        <TextView
            android:id="@+id/tvNoWatermark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nova"
            android:text="@string/download_audio"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnDownloadThumb"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:height="56dp"
        android:background="@drawable/custom_button_border"
        android:drawableStart="@drawable/ic_camera_border"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/download_video_no_watermark"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:cardCornerRadius="100dp"
        app:cornerRadius="100dp"
        app:icon="@drawable/ic_camera_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDownloadAudio"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginTop="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_majesticons_camera_line" />

        <TextView
            android:id="@+id/tvDownloadThumb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nova"
            android:text="@string/download_thumbnail_jpg"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>